api/crates/postgres/tests/integration/tags/snapshots/integration__tags__fetch_by_name_or_alias_like____test_context_wrapped_with_multiple_name_succeeds.snap
---
source: crates/postgres/tests/integration/tags/fetch_by_name_or_alias_like.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "tags"."id"
FROM
  "tags"
INNER JOIN
  "tag_paths" ON "tag_paths"."descendant_id" = "tags"."id"
  AND "tag_paths"."ancestor_id" <> '00000000-0000-0000-0000-000000000000'
INNER JOIN
  "tags" AS "tag_ancestors" ON "tag_ancestors"."id" = "tag_paths"."ancestor_id"
LEFT JOIN
  (
    SELECT
      "id",
      unnest("aliases") AS "alias"
    FROM
      "tags"
  ) AS "tags_aliases" ON "tags_aliases"."id" = "tags"."id"
LEFT JOIN
  (
    SELECT
      "id",
      unnest("aliases") AS "alias"
    FROM
      "tags"
  ) AS "tag_ancestors_aliases" ON "tag_ancestors_aliases"."id" = "tag_ancestors"."id"
GROUP BY
  "tags"."id"
HAVING
  (
    bool_or(
      ("tag_ancestors"."name" ILIKE $1)
      OR ("tag_ancestors"."kana" ILIKE $2)
      OR ("tag_ancestors_aliases"."alias" ILIKE $3)
    )
  )
  AND (
    bool_or(
      ("tag_ancestors"."name" ILIKE $4)
      OR ("tag_ancestors"."kana" ILIKE $5)
      OR ("tag_ancestors_aliases"."alias" ILIKE $6)
    )
  )
ORDER BY
  bool_or(
    UPPER("tags"."name") = UPPER($7)
    OR UPPER("tags"."name") = UPPER($8)
  ) DESC,
  bool_or(
    UPPER("tags"."kana") = UPPER($9)
    OR UPPER("tags"."kana") = UPPER($10)
  ) DESC,
  bool_or(
    COALESCE(
      UPPER("tags_aliases"."alias") = UPPER($11),
      FALSE
    )
    OR COALESCE(
      UPPER("tags_aliases"."alias") = UPPER($12),
      FALSE
    )
  ) DESC,
  MAX(
    (
      (
        array_length(
          string_to_array(UPPER("tags"."name"), UPPER($13)),
          1
        )
      ) - 1
    ) + (
      (
        array_length(
          string_to_array(UPPER("tags"."name"), UPPER($14)),
          1
        )
      ) - 1
    )
  ) DESC,
  SUM(
    (
      (
        array_length(
          string_to_array(UPPER("tags"."name"), UPPER($15)),
          1
        )
      ) - 1
    ) + (
      (
        array_length(
          string_to_array(UPPER("tags"."name"), UPPER($16)),
          1
        )
      ) - 1
    )
  ) DESC,
  (
    MIN(
      NULLIF(strpos(UPPER("tags"."name"), UPPER($17)), 0)
    ),
    MIN(
      NULLIF(strpos(UPPER("tags"."name"), UPPER($18)), 0)
    )
  ) ASC,
  (
    MIN(
      NULLIF(strpos(UPPER("tags"."kana"), UPPER($19)), 0)
    ),
    MIN(
      NULLIF(strpos(UPPER("tags"."kana"), UPPER($20)), 0)
    )
  ) ASC,
  bool_or(
    UPPER("tag_ancestors"."name") = UPPER($21)
    OR UPPER("tag_ancestors"."name") = UPPER($22)
  ) DESC,
  bool_or(
    UPPER("tag_ancestors"."kana") = UPPER($23)
    OR UPPER("tag_ancestors"."kana") = UPPER($24)
  ) DESC,
  bool_or(
    COALESCE(
      UPPER("tag_ancestors_aliases"."alias") = UPPER($25),
      FALSE
    )
    OR COALESCE(
      UPPER("tag_ancestors_aliases"."alias") = UPPER($26),
      FALSE
    )
  ) DESC,
  MAX(
    (
      (
        array_length(
          string_to_array(UPPER("tag_ancestors"."name"), UPPER($27)),
          1
        )
      ) - 1
    ) + (
      (
        array_length(
          string_to_array(UPPER("tag_ancestors"."name"), UPPER($28)),
          1
        )
      ) - 1
    )
  ) DESC,
  SUM(
    (
      (
        array_length(
          string_to_array(UPPER("tag_ancestors"."name"), UPPER($29)),
          1
        )
      ) - 1
    ) + (
      (
        array_length(
          string_to_array(UPPER("tag_ancestors"."name"), UPPER($30)),
          1
        )
      ) - 1
    )
  ) DESC,
  (
    MIN(
      NULLIF(
        strpos(UPPER("tag_ancestors"."name"), UPPER($31)),
        0
      )
    ),
    MIN(
      NULLIF(
        strpos(UPPER("tag_ancestors"."name"), UPPER($32)),
        0
      )
    )
  ) ASC,
  (
    MIN(
      NULLIF(
        strpos(UPPER("tag_ancestors"."kana"), UPPER($33)),
        0
      )
    ),
    MIN(
      NULLIF(
        strpos(UPPER("tag_ancestors"."kana"), UPPER($34)),
        0
      )
    )
  ) ASC,
  "tags"."kana" ASC'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
SELECT
  "tag_orders"."order",
  "distance",
  "tag_ancestors"."id" AS "ancestor_id",
  "tag_ancestors"."name" AS "ancestor_name",
  "tag_ancestors"."kana" AS "ancestor_kana",
  "tag_ancestors"."aliases" AS "ancestor_aliases",
  "tag_ancestors"."created_at" AS "ancestor_created_at",
  "tag_ancestors"."updated_at" AS "ancestor_updated_at",
  "tag_descendants"."id" AS "descendant_id",
  "tag_descendants"."name" AS "descendant_name",
  "tag_descendants"."kana" AS "descendant_kana",
  "tag_descendants"."aliases" AS "descendant_aliases",
  "tag_descendants"."created_at" AS "descendant_created_at",
  "tag_descendants"."updated_at" AS "descendant_updated_at"
FROM
  "tag_paths"
LEFT JOIN
  (
    SELECT
      "column1" AS "order",
      "column2" AS "id"
    FROM
      (
        VALUES
          ($1, $2), ($3, $4)) AS "tag_orders"
  ) AS "tag_orders" ON "tag_orders"."id" = "descendant_id"
  AND "ancestor_id" IN (
    "descendant_id",
    '00000000-0000-0000-0000-000000000000'
  )
INNER JOIN
  "tags" AS "tag_ancestors" ON "tag_ancestors"."id" = "tag_paths"."ancestor_id"
INNER JOIN
  "tags" AS "tag_descendants" ON "tag_descendants"."id" = "tag_paths"."descendant_id"
WHERE
  (
    "distance" = 0
    AND "ancestor_id" IN ($5)
  )
  OR (
    "distance" <= 1
    AND "descendant_id" IN (
      SELECT
        "ancestor_id"
      FROM
        "tag_paths"
      WHERE
        "distance" <= $6
        AND "descendant_id" IN ($7)
    )
  )
  OR (
    "distance" <= 1
    AND "ancestor_id" IN (
      SELECT
        "descendant_id"
      FROM
        "tag_paths"
      WHERE
        "distance" <= $8
        AND "ancestor_id" IN ($9)
    )
  )
ORDER BY
  "distance" ASC,
  "tag_orders"."order" ASC,
  "tag_ancestors"."kana" ASC,
  "tag_descendants"."kana" ASC'''
rows_affected = 6
rows_returned = 6
